label encoding prediction

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -97,7 +97,7 @@
   </div>
   </form>
   <h3>
-    The prediction is {{results}}
+    The prediction is {{result}}
   </h3>
 {% endblock content %}
 
